# mtb-trail-reconstruction

./: .gitattributes  .gitignore  MIGRATION.md  PATCH_INSTRUCTIONS.md  README.md  README.pl.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml
data/: README.md
docs/: data_sources.md  pipeline.md
examples/: README.md
scripts/: 01_clean_lidar.py  02_extract_ground.py  03_process_gps.py  04_build_mesh.py  05_generate_lod.py  06_process_ortho.py  07_build_splatmap.py  08_apply_texture.py  run_all.py
src/mtb_terrain/: __init__.py
src/mtb_terrain/gps/: __init__.py  process.py
src/mtb_terrain/lidar/: __init__.py  cleanup.py  extract_ground.py  process.py
src/mtb_terrain/mesh/: __init__.py  delaunay.py  pipeline.py  terrain.py
src/mtb_terrain/ortho/: __init__.py  pipeline.py
src/mtb_terrain/splatmap/: __init__.py  pipeline.py
src/mtb_terrain/texture/: __init__.py  pipeline.py
src/mtb_terrain/viz/: __init__.py  elevation_profile.py  slope_coloring.py
unity/: README.md
