[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mtb-terrain"
version = "0.1.0"
description = "Pipeline rekonstrukcji trasy MTB z danych LiDAR/GPS/ortofoto do wizualizacji Unity"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Szymon"}]
keywords = ["lidar", "gis", "geospatial", "mtb", "unity", "3d-reconstruction", "pdal", "open3d"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # line length juz pilnuje formatter

[tool.black]
line-length = 100
target-version = ["py311"]
